4 files modified, 4 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 <app-top-bar></app-top-bar>
 
 <div class="container">
+ <!-- <router-outlet></router-outlet>
+  -->
   <router-outlet></router-outlet>
 </div>
+<!--<app-resume></app-resume>
+-->
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
